--- a/style.css
+++ b/style.css
@@ -39,3 +39,10 @@ section {
     margin-left: auto;
     margin-right: auto;
 }
+
+.back-g-imag {
+    background-image: url(Final/shape1.png);
+    background-position: center;
+    
+
+}
