--- a/style.css
+++ b/style.css
@@ -92,3 +92,14 @@ h1 {
 .text-color {
     color: rgb(95, 93, 93);
 }
+
+
+.company-details {
+    background-image: linear-gradient(to right, black, rgb(68, 63, 63));
+    margin-left: 0;
+    margin-right: 0;
+}
+.text-position {
+    color: wheat;
+    
+}
