--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 
 span {
@@ -13,7 +14,7 @@ h1 {
 .block {
     display: flex;
     margin-bottom: 100px;
-}
+    }
 
 .f-size {
     font-size: 30px;
@@ -46,20 +47,23 @@ h1 {
 }
 
 .div-width img {
-    width: 90%;
+    width: 100%;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 0;
+    margin-right: 0;
+    
 }
 
 
 .backg-img1 {
     background-image: url(Final/cool-background.png);
     background-position: center;
+    
 }
 
 .text-ali-heading {
     text-align: center;
+    
 }
 .text-ali {
     text-align: justify;
@@ -96,10 +100,12 @@ h1 {
 
 .company-details {
     background-image: linear-gradient(to right, black, rgb(68, 63, 63));
-    margin-left: 0;
-    margin-right: 0;
-}
+    padding-top: 20px;
+    padding-bottom: 20px;
+       }
 .text-position {
     color: wheat;
-    
-}
+    font-size: 10px;
+   }
+
+   
