--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ h1 {
     font-size: 30px;
     font-weight: bolder;
     margin: 0;
+    padding-top: 20px;
 }
 
 .top-padding {
@@ -96,7 +97,7 @@ h1 {
     padding-right: 20px;
 }
 
-.food-menu {
+.shadow-box {
     box-shadow: 0 0 15px 5px  rgb(216, 210, 210);
     width: 33%;
     margin: 30px;
@@ -133,4 +134,15 @@ h1 {
     font-size: 10px;
    }
 
-   
+.social-m-follower {
+    box-shadow: 0 0 15px 5px  rgb(216, 210, 210);
+    display: flex;
+    margin: 50px;
+    border-radius: 10px;
+}  
+
+.follower-text-position {
+    width: 33%;
+    text-align: center;
+    
+}
