--- a/style.css
+++ b/style.css
@@ -99,19 +99,23 @@ h1 {
 
 .shadow-box {
     box-shadow: 0 0 15px 5px  rgb(216, 210, 210);
-    width: 33%;
+    width: 30%;
     margin: 30px;
     border-radius: 25px;
 }
 
-.img-position {
+.img-position img{
     width: 90%;
-    margin: 10px;
-    display: block;
-    background-position: center;
-    border: 10px white solid;
+    height: 90%;
     border-radius: 25px;
+    margin: auto;
+    padding: 20px;
+    
+   
+
 }
+
+
 
 .menu-box {
     display: flex;
